# rest_api_doc_converter

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_23_1945-initial_revision.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: series.py
app/core/: config.py
app/domain/documents/: entities.py  repositories.py
app/domain/series/: entities.py  repositories.py
app/infrastructure/: database.py  models.py
app/infrastructure/repositories/: document_repository.py  series_repository.py
app/services/: aws_service.py  s3_service.py  series_service.py
